--- a/venieri/venieri/templates/base.html
+++ b/venieri/venieri/templates/base.html
@@ -1,9 +1,12 @@
 {% load static wagtailuserbar %}
 
+{% load wagtailcore_tags wagtailimages_tags event_tags%}
+
 <!DOCTYPE html>
 <html class="no-js" lang="en">
     <head>
-        <meta charset="utf-8" />
+       <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
             {% block title %}
                 {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
@@ -15,10 +18,16 @@
             {% endblock %}
         </title>
         <meta name="description" content="" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- UIkit CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/css/uikit.min.css" />
+
+<!-- UIkit JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit-icons.min.js"></script>
+
 
         {# Global stylesheets #}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/venieri.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/mysite.css' %}">
 
         {% block extra_css %}
             {# Override this in templates to add extra stylesheets #}
@@ -26,12 +35,37 @@
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
+
         {% wagtailuserbar %}
+<body>
+         <div class="uk-container uk-container-small" >
+        <nav class="uk-navbar-container" uk-navbar>
+    <div class="uk-navbar-left" style="height:50px;">
+        <ul class="uk-navbar-nav " >
+            {% menu as menu %}
+            {% for item in menu %}
+                {% if item.slug == page.slug %}
+                    <li class="uk-active"><a href="#">{{item.title}}</a></li>
+                {% else %}
+                    <li class="uk-parent"><a href="{% pageurl item %}">{{item.title}}</a></li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
+</nav>
+
+
+</div>
+         <div class="uk-section uk-padding-small ">
+    <div class="uk-container  uk-container-small">
+
 
         {% block content %}{% endblock %}
+           </div>
+</div>
 
         {# Global javascript #}
-        <script type="text/javascript" src="{% static 'js/venieri.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/mysite.js' %}"></script>
 
         {% block extra_js %}
             {# Override this in templates to add extra javascript #}
