still fixing things

--- a/wagtail/venieri/events/templates/events/event_index_page.html
+++ b/wagtail/venieri/events/templates/events/event_index_page.html
@@ -28,7 +28,7 @@
                 {% endif %}
 
                         </div>
-                        <p class="uk-article-meta">{{event.date}}</p>
+                        <p class="uk-article-meta">{{event.start_date}}</p>
                 <p class="uk-text-lead">
                       <p>{{ event.intro|richtext }}</p>
                 </p>
