--- a/vanilla/venieri/venieri/templates/base.html
+++ b/vanilla/venieri/venieri/templates/base.html
@@ -1,22 +1,20 @@
-
-
 {% load meta %}
 
 {% load static %}
+{% load archive_tags %}
 
 <!DOCTYPE html>
 <html>
     <head {% meta_namespaces %}>
+
+    {% include_analytics %}
+
     {% include "meta/meta.html" %}
         <title>{% block title %}Lydia Venieri {% endblock %}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- UIkit CSS -->
-<link rel="stylesheet" href="{% static "uikit/css/uikit.min.css" %}" />
 
-<!-- UIkit JS -->
-<script src="{% static "uikit/js/uikit.min.js" %}"></script>
-<script src="{% static "uikit/js/uikit-icons.min.js" %}"></script>
+         {% include_css_framework %}
 
     </head>
     <body>
@@ -47,6 +45,7 @@
          {% block content %}{% endblock %}
     </div>
 </div>
+
 
 
     </body>
