--- a/vanilla/venieri/archive/templates/art_detail.html
+++ b/vanilla/venieri/archive/templates/art_detail.html
@@ -2,11 +2,12 @@
 {% load staticfiles %}
 {% load embed_video_tags %}
 {% load archive_tags %}
-
+{% load render_json_ld from json_ld %}
 {% block about_lydia %}{% endblock %}
 {% block banner %}{% endblock %}
 
 {% block content %}
+    {% render_json_ld art.sd %}
   {% with media=art.media.first %}
     {% if media.is_horizontal %}
         <div  uk-lightbox>
