--- a/vanilla/venieri/archive/templates/event_detail.html
+++ b/vanilla/venieri/archive/templates/event_detail.html
@@ -2,12 +2,13 @@
 {% load staticfiles %}
 {% load embed_video_tags %}
 {% load archive_tags %}
-
+{% load render_json_ld from json_ld %}
 {% block about_lydia %}{% endblock %}
 {% block banner %}{% endblock %}
 
 {% block content %}
 
+{% render_json_ld event.sd %}
 <article class="uk-article">
 
 
