--- a/vanilla/venieri/archive/templates/event_list.html
+++ b/vanilla/venieri/archive/templates/event_list.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% load embed_video_tags %}
 {% load archive_tags %}
+{% load render_json_ld from json_ld %}
 
 {% block about_lydia %}{% endblock %}
 {% block banner %}{% endblock %}
@@ -10,12 +11,14 @@
 
 
 {% block content %}
+<h1 class="uk-invisible" style="height:0px;">Lydia Venieri</h1>
     {%for event in events %}
+        {% render_json_ld event.sd %}
         <style>
            {{event.css|safe}}
        </style>
 
-            <article class="uk-article {{event.slug}} uk-padding">
+            <article class="uk-article {{event.slug}} {% if forloop.first %} uk-padding-remove-top  {% else %} uk-padding-large {% endif %}">
                 <div  uk-grid>
                     <div class="uk-text-center uk-width-expand">
                 <h2 class="uk-h3 "><a class="uk-link-reset" href="{{event.get_absolute_url}}">{{event.title}}</a></h2>
@@ -30,10 +33,11 @@
                     <img   src="{{media.image.thumbnail.900x900}}" alt="Lydia Venieri, {{event.title}}" uk-img>
                          <p>{{event.date}}</p>
                          {% if event.leader %}
-        <p >
-             {% render event.leader %}<br/>
+        <div>
+             {% render event.leader %}
+        </div>
             <a  href="{{event.get_absolute_url}}">read more</a>
-        </p>
+
                 {% endif %}
                     </div>
                     {% else %}
