--- a/vanilla/venieri/archive/templates/media_responsive.html
+++ b/vanilla/venieri/archive/templates/media_responsive.html
@@ -1,4 +1,7 @@
 {% load embed_video_tags %}
+{% load render_json_ld from json_ld %}
+
+{% render_json_ld media.sd %}
 {% if media.video_url %}
     {% video media.video_url as art_video %}
         <a class="uk-inline {{media_class}}" href="{{media.video_url}}" alt="Lydia Venieri, {{media.caption}}" ></a>
