--- a/archive/templates/art_responsive.html
+++ b/archive/templates/art_responsive.html
@@ -2,7 +2,22 @@
 {% load render_json_ld from json_ld %}
 {% load archive_tags %}
 {% render_json_ld art.sd %}
-{% render_media id=art.media.first.id %}
-    <p>{{art.title}}</p>
+
+
+{% if media.video_url %}
+    {% video media.video_url as art_video %}
+
+
+ {% video media.video_url as art_video %}
+                    <iframe src="{{art_video.url}}?autoplay=0&amp;showinfo=0&amp;rel=0&amp;modestbranding=1&amp;playsinline=1"
+                            width="560" height="315" frameborder="0" allowfullscreen uk-responsive
+                            uk-video="automute: true" uk-video></iframe>
+                    {% endvideo %}
+    {% endvideo %}
+{% else %}
+<a class="uk-link-reset" href="{%url 'art-work' art.slug %}"><img class="{{art_class}}" src="{{media_image_url}}" alt="Lydia Venieri, {{art.title}}" uk-img></a>
+{% if show_caption %} <p><a class="uk-link-reset" href="{%url 'art-work' art.slug %}">{{art.title}}</a></p>{% endif %}
+{% endif %}
+<p><a class="uk-link-reset" href="{%url 'art-work' art.slug %}">{{art.title}}</a></p>
 
 
