--- a/archive/templates/media_responsive.html
+++ b/archive/templates/media_responsive.html
@@ -2,11 +2,15 @@
 {% load render_json_ld from json_ld %}
 
 {% render_json_ld media.sd %}
+
 {% if media.video_url %}
     {% video media.video_url as art_video %}
-        <a class="uk-inline {{media_class}}" href="{{media.video_url}}" alt="Lydia Venieri, {{media.caption}}" ></a>
+<iframe src="{{media.video_url}}?autoplay=0&amp;showinfo=0&amp;rel=0&amp;modestbranding=1&amp;playsinline=1"
+                            width="560" height="315" frameborder="0" allowfullscreen uk-responsive
+                            uk-video="automute: true" uk-video></iframe>
+
     {% endvideo %}
 {% else %}
-<img class="{{media_class}}" src="{{media_image_url}}" alt="Lydia Venieri, {{media.caption}}" uk-img>
-        {% if show_caption %} <p>{{media.caption}}</p>{% endif %}
+<a class="uk-link-reset" href="{%url 'art-work' art.slug %}"><img class="{{media_class}}" src="{{media_image_url}}" alt="Lydia Venieri, {{media.caption}}" uk-img></a>
+{% if show_caption %} <p><a class="uk-link-reset" href="{%url 'art-work' art.slug %}">{{media.caption}}</a></p>{% endif %}
 {% endif %}
