--- a/archive/templates/project_detail.html
+++ b/archive/templates/project_detail.html
@@ -20,7 +20,7 @@
         {% for art in project.visible_art %}
 
         <div class="">
-            {% render_art art=art %}
+            {% render_art art=art automute=False water=9 %}
 
         </div>
         {% endfor %}
