--- a/archive/templates/project_list.html
+++ b/archive/templates/project_list.html
@@ -28,7 +28,7 @@
                             uk-video="automute: true" uk-video></iframe>
                     {% endvideo %}
                     {% else %}
-                    <img class="" src="{{media.image.url}}" alt="Lydia Venieri, {{art.title}}" uk-img>
+                    <img class="" src="{{media.image.thumbnail.250x250}}" alt="Lydia Venieri, {{art.title}}" uk-img>
                     {% endif %}
 
                     {% endwith %}
