--- a/archive/templates/css_framework.html
+++ b/archive/templates/css_framework.html
@@ -2,11 +2,11 @@
 
 {% if STATIC_SITE %}
 <!-- UIkit CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/css/uikit.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/css/uikit.min.css" />
 
 <!-- UIkit JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/js/uikit-icons.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/js/uikit-icons.min.js"></script>
 
 {% else %}
 <!-- UIkit CSS -->
@@ -16,3 +16,6 @@
 <script src="{% static "uikit/js/uikit.min.js" %}"></script>
 <script src="{% static "uikit/js/uikit-icons.min.js" %}"></script>
 {% endif %}
+
+
+
