--- a/archive/templates/media_responsive.html
+++ b/archive/templates/media_responsive.html
@@ -5,12 +5,34 @@
 
 {% if media.video_url %}
     {% video media.video_url as art_video %}
-<iframe src="{{media.video_url}}?autoplay=0&amp;showinfo=0&amp;rel=0&amp;modestbranding=1&amp;playsinline=1"
+<iframe src="{{art_video}}?autoplay=0&amp;showinfo=0&amp;rel=0&amp;modestbranding=1&amp;playsinline=1"
                             width="560" height="315" frameborder="0" allowfullscreen uk-responsive
                             uk-video="automute: true" uk-video></iframe>
 
     {% endvideo %}
+
+
+
 {% else %}
-<a class="uk-link-reset" href="{%url 'art-work' art.slug %}"><img class="{{media_class}}" src="{{media_image_url}}" alt="Lydia Venieri, {{media.caption}}" uk-img></a>
+ {% if art %}
+    <a class="uk-link-reset" href="{%url 'art-work' art.slug %}">
+{% else %}
+    {%if default_url %}
+        <a class="uk-link-reset" href="{{ default_url }}">
+    {% endif %}
+{% endif %}
+    <img class="{{media_class}}" data-src="{{media_image_url}}" alt="Lydia Venieri, {{media.caption}}" uk-img></a>
+     {% if art %}
+
 {% if show_caption %} <p><a class="uk-link-reset" href="{%url 'art-work' art.slug %}">{{media.caption}}</a></p>{% endif %}
+        {% else %}
+    {% if show_caption %}
+        {%if default_url %}
+            <p><a a class="uk-link-reset" href="{{ default_url }}">{{media.caption}}</a></p>
+        {% endif %}
+
+
+    {% endif %}
+
+    {% endif %}
 {% endif %}
