--- a/lib/venieri_web/controllers/page_html/projects.html.heex
+++ b/lib/venieri_web/controllers/page_html/projects.html.heex
@@ -1,5 +1,7 @@
 
-
+<div class="mb-5 mt-10">
+<h1 class="text-2xl/7 font-bold text-gray-700 sm:truncate sm:text-3xl sm:tracking-tight">PROJECTS</h1>
+</div>
 
  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-4">
       <%= for batch <- Enum.chunk_every(@projects, 5)  do %>
@@ -9,7 +11,7 @@
               <a href={"/projects/#{project.id}"}>
                 <img class="object-cover w-350  md:h-auto" 
              
-                src={"/media/" <> Venieri.Archives.Projects.image_url(project, 480)} alt="" /> 
+                src={Venieri.Archives.Projects.image_url(project, 480)} alt="" /> 
         
         </a>
               <div class="p-5">
