simple project detail page done, need to add slide show view

--- a/lib/venieri_web/live/project_live/show.html.heex
+++ b/lib/venieri_web/live/project_live/show.html.heex
@@ -7,7 +7,7 @@
                 <a href={~p"/works/#{work.id}"}>
                     <img 
                         class="pointer-events-none  object-cover group-hover:opacity-75"
-                        src={Venieri.Archives.Works.image_url(work, 1024)}
+                        src={Venieri.Archives.Works.image_url(work, width: 1024)}
                         alt={"Lydie Venieri - #{work.title}"} />
                 </a>
             </div>
