closed #76 - H1 dont need to show closed #77 - H1 should show for print only closed #78 - left align var bar closed #78 - navbar change invert font color in virtualworld closed #79 - nav_bar - highhigh lite in red visited page closed #82 - virtual world is squashed on mobile closed #83 - bio - show links broken

--- a/lib/venieri_web/components/layouts/root.html.heex
+++ b/lib/venieri_web/components/layouts/root.html.heex
@@ -29,8 +29,10 @@
     </script>
   </head>
   <body class={[assigns[:bg_color], "mx-auto max-h-dvh py-1 px-3  md:px-20"]}>
-  <.navbar />
-  
+  <div class={["mx-auto", assigns[:max_width] || "max-w-4xl"]}>
+  <.navbar_left view={assigns[:view]} />
+
     {@inner_content}
+  </div>
   </body>
 </html>
